--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "librosa==0.11.0",
     "s3tokenizer",
     "torch==2.6.0",
-    "torchaudio==2.6.0",
+    "torchaudio>=2.6,<3",
     "transformers==4.46.3",
     "diffusers==0.29.0",
     "resemble-perth==1.0.1",
