--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "numpy>=1.26.0",
     "librosa==0.11.0",
     "s3tokenizer",
-    "torch==2.6.0",
+    "torch>=2.6,<3",
     "torchaudio>=2.6,<3",
     "transformers==4.46.3",
     "diffusers==0.29.0",
